--- a/src/app/Component/Card/card-list/modal-card-add/modal-card-add.component.html
+++ b/src/app/Component/Card/card-list/modal-card-add/modal-card-add.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<!-- <div class="modal-header">
 	<h4 class="modal-title" id="modal-basic-title">{{modalCard.card.name}}</h4>
 	<button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
 		<span aria-hidden="true">&times;</span>
@@ -40,4 +40,4 @@
 			</tr>
 		</tbody>
 	</table>
-</div>
+</div> -->
