--- a/src/app/Component/Deck/DeckList/deck-list.component.html
+++ b/src/app/Component/Deck/DeckList/deck-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-lg">
+<div class="container-lg">leader
     <div class="deck-row">
         <div *ngFor="let userDeck of deckService.deckList" class="deck-container">
             <div class="deck-box">
@@ -6,20 +6,20 @@
                     <div class="box">
                         <div *ngIf="userDeck.deck.image != null" class="box__face box__face--front" style="background-image:url(data:image/png;base64,{{userDeck.deck.image}}) ;">            
                         </div>
-                        <div  *ngIf="userDeck.deck.image == null" class="box__face box__face--front {{userDeck.leader.card.color}}">
-                            <img  src="./assets/Img/{{userDeck.leader.card.setId}}/{{userDeck.leader.card.number}}.png" alt="{{userDeck.deck.name}}">
+                        <div  *ngIf="userDeck.deck.image == null" class="box__face box__face--front {{userDeck.leader.color}}">
+                            <img  src="./assets/Img/{{userDeck.leader.setId}}/{{userDeck.leader.number}}.png" alt="{{userDeck.deck.name}}">
                         </div>
                         <div class="box__face box__face--back"></div>
                         <div class="box__face box__face--right 
-                        {{userDeck.leader.card.color.split('-').length > 1 ?
-                     userDeck.leader.card.color.split('-')[1]: 
-                     userDeck.leader.card.color }}">
+                        {{userDeck.leader.color.split('-').length > 1 ?
+                     userDeck.leader.color.split('-')[1]: 
+                     userDeck.leader.color }}">
                             <p class="deck-name">
                                 {{userDeck.deck.name}}
                             </p>
                         </div>
                         <div class="box__face box__face--left"></div>
-                        <div class="box__face box__face--top {{userDeck.leader.card.color}}">
+                        <div class="box__face box__face--top {{userDeck.leader.color}}">
                             {{userDeck.deck.format}}
                         </div>
                         <div class="box__face box__face--bottom"></div>
