--- a/src/app/Component/Card/set-list/set-list.component.html
+++ b/src/app/Component/Card/set-list/set-list.component.html
@@ -1,8 +1,8 @@
 <div class="app">
-    <img class="loading" src="./assets/Img/loading.gif" alt="loading" *ngIf="this.cardService.setCardList.length == 0">
+    <img class="loading" src="./assets/Img/loading.gif" alt="loading" *ngIf="this.globalService.constCardSetList.length == 0">
 
 
-    <div *ngFor="let setCard of this.cardService.setCardList">
+    <div *ngFor="let setCard of this.globalService.constCardSetList">
 
         <div class="set-container"
             *ngIf="(setCard.set.name.includes(cardService.filter.setName) || cardService.filter.setName.includes('Any')) && checkSet(setCard.cardList)">
