--- a/src/app/Component/Card/card-list/card-list-img/card-list-img.component.html
+++ b/src/app/Component/Card/card-list/card-list-img/card-list-img.component.html
@@ -5,6 +5,8 @@
 			<h1>{{setCard.set.name}}</h1>
 			<h3>Card: {{setCard.set.cardOwned}} / {{setCard.set.nCard}}</h3>
 			<h3 *ngIf="setCard.set.nParallel > 0">Parallel: {{setCard.set.parallelOwned}} / {{setCard.set.nParallel}}</h3>
+			<button (click)="cardService.completeBaseSet(setCard.set.id)"> Auto Complete!</button>
+			<button (click)="cardService.retriveMissingCard(setCard)"> Copy Missing!</button>
 <div class=" card-list-container-img " id="card-list-img">
 
 
