--- a/src/app/Component/Card/set-list/set-list.component.html
+++ b/src/app/Component/Card/set-list/set-list.component.html
@@ -1,11 +1,11 @@
 <div class="app">
-    <img class="loading" src="./assets/Img/loading.gif" alt="loading" *ngIf="this.globalService.constCardSetList.length == 0">
+    <img class="loading" src="./assets/Img/loading.gif" alt="loading" *ngIf="this.cardService.setCardList.length == 0">
 
 
-    <div *ngFor="let setCard of this.globalService.constCardSetList">
+    <div *ngFor="let setCard of this.cardService.setCardList">
 
         <div class="set-container"
-            *ngIf="(setCard.set.name.includes(cardService.filter.setName) || cardService.filter.setName.includes('Any')) && checkSet(setCard.cardList)">
+            *ngIf="checkSet(setCard.cardList)">
             <h1>{{setCard.set.name}}</h1>
             <h3>Card: {{setCard.set.nCard}}</h3>
             <h3 *ngIf="setCard.set.nParallel > 0">Parallel: {{setCard.set.nParallel}}</h3>
@@ -14,7 +14,7 @@
                 <div class="set-card" *ngFor="let cardDet of setCard.cardList">
                     <img src="./assets/Img/{{cardDet.card.setId}}/{{cardDet.card.number}}.png"
                         (click)="cardService.openView(cardDet.card)" alt="{{cardDet.card.name}}"
-                        *ngIf="cardService.cardIf(cardDet)" >
+                        >
                 </div>
             </div>
         </div>
