--- a/src/app/Component/Card/card-list/card-list.component.html
+++ b/src/app/Component/Card/card-list/card-list.component.html
@@ -1,6 +1,5 @@
 <img class="loading" src="./assets/Img/loading.gif" alt="loading" *ngIf="globalService.constCardSetList.length == 0 && !globalService.isCardListAll">
 
 <div *ngIf="cardService.cardListDetails != []">
-    <app-card-list-img *ngIf="this.globalService.view == '0'" [cardList]="setCardList"></app-card-list-img>
-    <app-card-list-text *ngIf="this.globalService.view == '1'" [cardList]="setCardList"></app-card-list-text>
+    <app-card-list-img [cardList]="setCardList"></app-card-list-img>
 </div>
